--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "# Import pandas\n",
-    "\n",
+    "import pandas as p\n",
     "\n",
     "# Import the 'lego_sets.csv' dataset\n",
     "df = None\n",
