Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,8 +45,8 @@
    "outputs": [],
    "source": [
     "# Import pandas\n",
-    "import pandas as p\n",
-    "\n",
+    "import pandas as pd\n",
+    "pd.\n",
     "# Import the 'lego_sets.csv' dataset\n",
     "df = None\n",
     "\n",
