--- a/index.ipynb
+++ b/index.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "# Import pandas\n",
     "import pandas as pd\n",
-    "pd.read_csv()\n",
+    "pd.read_csv('lego_sets.csv')\n",
     "# Import the 'lego_sets.csv' dataset\n",
     "df = None\n",
     "\n",
