Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -49,9 +49,10 @@
     "\n",
     "\n",
     "# Import the 'lego_sets.csv' dataset\n",
-    "df = None\n",
+    "df = pd.read_csv('lego_sets.csv')\n",
     "\n",
-    "# Print the first five rows of DataFrame\n"
+    "# Print the first five rows of DataFrame\n",
+    "df.head"
    ]
   },
   {
