Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -310,7 +310,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Call the .describe() method\n"
+    "# Call the .describe() method\n",
+    "df.descr"
    ]
   },
   {
