--- a/index.ipynb
+++ b/index.ipynb
@@ -489,7 +489,7 @@
    "outputs": [],
    "source": [
     "# Calculate the median of the star_rating column\n",
-    "df"
+    "df[star_rating.me]"
    ]
   },
   {
