Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -517,7 +517,7 @@
    "outputs": [],
    "source": [
     "# Print the number of unique values in play_star_rating\n",
-    "df[]"
+    "df['play_star_ratin']"
    ]
   },
   {
