--- a/index.ipynb
+++ b/index.ipynb
@@ -544,7 +544,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate the standard deviation of the list_price column"
+    "# Calculate the standard deviation of the list_price column\n",
+    "df.[]"
    ]
   },
   {
