--- a/index.ipynb
+++ b/index.ipynb
@@ -591,7 +591,7 @@
    "outputs": [],
    "source": [
     "# Get the 90% quantile for all numerical columns\n",
-    "df.quartile"
+    "df.quartile()"
    ]
   },
   {
