--- a/index.ipynb
+++ b/index.ipynb
@@ -629,7 +629,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Print the unique values in the review_difficulty column"
+    "# Print the unique values in the review_difficulty column\n",
+    "df.['review']"
    ]
   },
   {
