Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -630,7 +630,7 @@
    "outputs": [],
    "source": [
     "# Print the unique values in the review_difficulty column\n",
-    "df.['review']"
+    "df.['review_difficulty'].uniq"
    ]
   },
   {
